--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -125,7 +125,11 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '11'
-      - name: Setup Firefox and GeckoDriver
+      - name: Setup Firefox
+        uses: browser-actions/setup-firefox@latest
+        with:
+          firefox-version: latest-devedition
+      - name: Setup GeckoDriver
         uses: ./.github/actions/setup-firefox
       - name: Setup Chrome and ChromeDriver
         uses: ./.github/actions/setup-chrome
@@ -166,7 +170,11 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '11'
-      - name: Setup Firefox and GeckoDriver
+      - name: Setup Firefox
+        uses: browser-actions/setup-firefox@latest
+        with:
+          firefox-version: latest-devedition
+      - name: Setup GeckoDriver
         uses: ./.github/actions/setup-firefox
       - name: Setup Chrome and ChromeDriver
         uses: ./.github/actions/setup-chrome
@@ -202,7 +210,11 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '11'
-      - name: Setup Firefox and GeckoDriver
+      - name: Setup Firefox
+        uses: browser-actions/setup-firefox@latest
+        with:
+          firefox-version: latest-devedition
+      - name: Setup GeckoDriver
         uses: ./.github/actions/setup-firefox
       - name: Start XVFB
         run: Xvfb :99 &
